* Aligned the header on guest create event page * Fixed the calendar JavaScript on guest create event page * Sending invites using email addresses * Integrated Facebook send and likes * Integrated the CSV uploader

--- a/css/event_style.css
+++ b/css/event_style.css
@@ -90,3 +90,7 @@
 	margin: 0px;
 	padding: 0px;
 }
+
+#fb-like-button {
+	margin-top: 20px;
+}
