--- a/css/home_style.css
+++ b/css/home_style.css
@@ -1,7 +1,7 @@
 /* NAVIGATION */
 ul.top_nav {
 	list-style: none outside none;
-	width: 1024px;
+	width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
 }
